Finalizando css do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav class="menu">
   <a href="#" class="icon-main">G</a>
-  <a href="#" class="icon-skills"></a>
-  <a href="#" class="icon-projects"></a>
-  <a href="#" class="icon-contact"></a>
+  <a href="#skills" class="icon-skills"></a>
+  <a href="#projects" class="icon-projects"></a>
+  <a href="#contact" class="icon-contact"></a>
   <div class="divider"></div>
   <a href="https://www.linkedin.com/in/guilherme-malosti/" target="_blank" class="icon-linkedin"></a>
   <a href="https://github.com/Malosti" target="_blank" class="icon-github"></a>
@@ -19,33 +19,37 @@
   </div>
 </section>
 
-<section class="skills">7
+<section class="skills" id="skills">
   <h1>Competências</h1>
+
   <p>Backend</p>
-  <div class="loading-backend"></div>
+  <div class="loading backend"></div>
+
   <p>Frontend</p>
-  <div class="loading-frontend"></div>
+  <div class="loading frontend"></div>
+
   <p>DevOps</p>
-  <div class="loading-devops"></div>
+  <div class="loading devops"></div>
+  
   <p>Mobile</p>
-  <div class="loading-mobile"></div>
+  <div class="loading mobile"></div>
 </section>
 
-<section class="projects">
+<section class="projects" id="projects">
   <h1>Portifólio e <br> Experiências</h1>
   <div class="boxes">
-    <div class="box-blue"></div>
-    <div class="box-red"></div>
-    <div class="box-blue"></div>
+    <div class="box blue"><a href="https://github.com/Malosti/Projeto-OptimusTech" target="_blank">Projeto-OptimusTech</a></div>
+    <div class="box red"><a href="https://github.com/Malosti/ApiViaCep" target="_blank">ApiViaCep</a></div>
+    <div class="box blue"><a href="https://github.com/Malosti/MovieList" target="_blank">MovieList</a></div>
   </div>
   <div class="boxes">
-    <div class="box-orange"></div>
-    <div class="box-green"></div>
-    <div class="box-orange"></div>
+    <div class="box orange"><a href="https://malosti.github.io/projeto-slider-pokemon/" target="_blank">projeto-slider-pokemon</a></div>
+    <div class="box green"><a href="https://github.com/Malosti/SalesWeb" target="_blank">SalesWeb</a></div>
+    <div class="box orange"><a href="https://github.com/Malosti/Projeto_Tamagotchi" target="_blank">Projeto_Tamagotchi</a></div>
   </div>
 </section>
 
-<section class="contact">
+<section class="contact" id="contact">
   <h1>Entrar em <br> contato</h1>
   <div class="form">
     <div class="row">
