--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,6 @@
 
     a.icon-main
     {
-        font-family: 'Montserrat';
         font-size: 96px;
         color: #38B6FF;
         font-weight: bold;
@@ -103,9 +102,7 @@
     position: relative;
     z-index: 10;
     margin: 0;
-    font-family: 'Montserrat';
     font-size: 68px;
-    color: #FFFFFF;
 
     span
     {
@@ -121,10 +118,8 @@
     width: 220px;
     height: 60px;
     background-color: rgba(#38b6ff, 0.2);
-    font-family: 'Montserrat';
     font-size: 18px;
     font-weight: bold;
-    color: #FFFFFF;
     border: 1px solid #38b6ff;
     cursor: pointer;
 }
@@ -150,6 +145,213 @@
     margin: 0px 200px;
     padding-bottom: 120px;
     border-bottom: 1px solid rgba(#FFFFFF, 0.3);
+
+    h1
+    {
+        margin: 0;
+        font-size: 54px;
+        font-weight: bold;
+        padding-top: 80px;
+    }
+
+    p
+    {
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 24px;
+        margin-bottom: 8px;
+    }
+
+    .loading 
+    {
+        position: relative;
+        display: inline-block;
+        width: 60%;
+        height: 8px;
+        background: #707070;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, .2);
+        border-radius: 4px;
+        overflow: hidden;
+    }
+
+    .loading:after
+    {
+        content: '';
+        position: absolute;
+        left: 0;
+        height: 100%;
+        border-radius: 4px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, .2);
+    }
+
+    .loading.backend:after
+    {
+        background: #38B6FF;
+        width: 80%;
+    }
+
+    .loading.frontend:after 
+    { 
+        background: #FF5757;
+        width: 90%;
+    }
+    
+    .loading.devops:after 
+    {
+        background: #FFBD59;
+        width: 40%;
+    }
+    
+    .loading.mobile:after 
+    {
+        background: #00FFE0;
+        width: 25%;
+    }
+}
+
+.projects
+{
+    margin: 0px 200px;
+    padding-bottom: 120px;
+    border-bottom: 1px solid rgba(#FFFFFF, 0.3);
+
+    h1
+    {
+        margin: 0;
+        font-size: 54px;
+        font-weight: bold;
+        padding-top: 80px;
+        padding-bottom: 32px;
+    }
+
+    .boxes
+    {
+        width: 100%;
+        background-color: #707070;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .box
+    {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: bold;
+        width: 100%;
+        height: 200px;
+        
+        a
+        {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+    }
+
+    .box:hover
+    {
+        font-size: 24px;
+        cursor: pointer;
+    }
+    
+    .box.blue
+    {
+        background: rgb(56,182,255);
+        background: radial-gradient(circle, rgb(56,182,255,1) 0%, rgba(28,91,128,1) 100%);
+    }
+
+    .box.green
+    {
+        background: rgb(0, 255, 191);
+        background: radial-gradient(circle, rgb(0,255,191,1) 0%, rgba(0,128,112,1) 100%);
+    }
+
+    .box.orange
+    {
+        background: rgb(255,189,89);
+        background: radial-gradient(circle, rgb(255,189,89,1) 0%, rgba(128,95,45,1) 100%);
+    }
+
+    .box.red
+    {
+        background: rgb(255,87,87);
+        background: radial-gradient(circle, rgb(255,87,87,1) 0%, rgba(128,44,44,1) 100%);
+    }
+}
+
+.contact
+{
+    margin: 0px 200px;
+    padding-bottom: 120px;
+    border-bottom: 1px solid rgba(#FFFFFF, 0.3);
+
+    h1
+    {
+        margin: 0;
+        font-size: 54px;
+        font-weight: bold;
+        padding-top: 80px;
+        padding-bottom: 32px;
+    }
+
+    .form
+    {
+        width: 680px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .row
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .input
+    {
+        width: 100%;
+        height: 60px;
+        box-sizing: border-box;
+        background: rgba(#38b6ff, 0.2);
+        font-size: 18px;
+        font-weight: bold;
+        border: 1px solid #38b6ff;
+        padding: 24px;
+        margin-bottom: 12px;
+    }
+
+    .input:last-child
+    {
+        margin-left: 12px;
+    }
+
+    .textarea
+    {
+        height: 240px;
+        background: rgba(#38b6ff, 0.2);
+        font-size: 18px;
+        font-weight: bold;
+        border: 1px solid #38b6ff;
+        padding-left: 24px;
+        padding-top: 16px;
+        margin-bottom: 12px;
+    }
+
+    .submit
+    {
+        width: 220px;
+        height: 60px;
+        background: #38b6ff;
+        font-size: 18px;
+        font-weight: bold;
+        border: 1px solid #38b6ff;
+        cursor: pointer;
+    }
+
 }
 
 button, input[type="submit"], input[type="text"], textarea
